added other pages

--- a/UI.html
+++ b/UI.html
@@ -20,16 +20,16 @@
 
       </header>
       <section>
-        <h1>Home Page</h1>
-        <p1>This is the project description
-        blabalablablabalbalbala<br><br></p1>
+        <h1>UI Design Page</h1>
+        <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
+        <p1>This is what is required for this page:<br><br></p1>
         <ul>
-          <li> <a href="roster.html">Team Roster Page</a></li>
-          <li> <a href="design.html">Software Design Page</a></li>
-          <li> <a href="UI.html">UI Design Page</li>
-          <li><a href="plan.html">Project Plan Page</li>
+          <li>Write a brief description of the look and feel you want your program to have, or cite an existing design language (e.g. minimal, Material Design, flat design, etc.) You could also cite an existing application or website as a source of inspiration.</li>
+          <li>Describe at a very high level how users will interact with your software.</li>
+          <li>This page should also include mock-ups of screens or views you plan to include in your application</li>
+          <li>No matter the format, ensure that your UI Design Page portrays the intended interfaces for all of your application’s user facing features, and how users will navigate between them.</li>
         </ul>
-        <h2>USER STORIES NEED TO BE DONE TOO</h2>
+
 
       </section>
       <footer>
