--- a/plan.html
+++ b/plan.html
@@ -20,16 +20,17 @@
 
       </header>
       <section>
-        <h1>Home Page</h1>
-        <p1>This is the project description
-        blabalablablabalbalbala<br><br></p1>
+        <h1>UI Design Page</h1>
+        <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
+        <p1>This is what is required for this page:<br><br></p1>
+        <p2> Use this page to propose any additional features your team would like to add to the project. Either in response to the returned proposal, or for something completely new, you must include:</p2>
         <ul>
-          <li> <a href="roster.html">Team Roster Page</a></li>
-          <li> <a href="design.html">Software Design Page</a></li>
-          <li> <a href="UI.html">UI Design Page</li>
-          <li><a href="plan.html">Project Plan Page</li>
+          <li>A title for the new feature or component</li>
+          <li>A brief description</li>
+          <li>A detailed and itemized feasibility statement and implementation plan</li>
+          <li>A brief statement about the rest of the project’s dependency on this feature</li>
         </ul>
-        <h2>USER STORIES NEED TO BE DONE TOO</h2>
+
 
       </section>
       <footer>
