--- a/design.html
+++ b/design.html
@@ -20,16 +20,11 @@
 
       </header>
       <section>
-        <h1>Home Page</h1>
-        <p1>This is the project description
-        blabalablablabalbalbala<br><br></p1>
-        <ul>
-          <li> <a href="roster.html">Team Roster Page</a></li>
-          <li> <a href="design.html">Software Design Page</a></li>
-          <li> <a href="UI.html">UI Design Page</li>
-          <li><a href="plan.html">Project Plan Page</li>
-        </ul>
-        <h2>USER STORIES NEED TO BE DONE TOO</h2>
+        <h1>Software Design Page</h1>
+        <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
+        <p1>This is what is required for this page:<br><br></p1>
+        <p2>This page will outline the design of your project and will consist, for now, of a UML class diagram. More details below.</p2>
+
 
       </section>
       <footer>
