--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <ul>
           <li> <a href="/roster.html">Team Roster Page</a></li>
           <li> <a href="/design.html">Software Design Page</a></li>
-          <li> <a href="/UI.html">UI Design Page</li>
-          <li><a href="/plan.html">Project Plan Page</li>
+          <li> <a href="/UI.html">UI Design Page</a></li>
+          <li><a href="/plan.html">Project Plan Page</a></li>
         </ul>
         <h2>USER STORIES NEED TO BE DONE TOO</h2>
 
