Please add urselves to it and commit, I have put bulletins, cause i think it looks better than just paragraphs. please add ur names to it following the format and commit

--- a/roster.html
+++ b/roster.html
@@ -23,7 +23,16 @@
         <h1>Team Roster Page</h1>
         <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
         <p1>This is what is required for this page:<br><br></p1>
-        <p2>The page must include a list of all your team’s members and a brief summary of each member’s skills/background/hobbies/philosophy/whatever. You should also list any roles or responsibilities that have been delegated to members (e.g. Code Champion, Repo Hero, Database Ace, Team Overseer, UX Guru, etc.) Be creative!</p2>
+        <p2>The page must include a list of all your team’s members and a brief summary of each member’s skills/background/hobbies/philosophy/whatever. You should also list any roles or responsibilities that have been delegated to members (e.g. Code Champion, Repo Hero, Database Ace, Team Overseer, UX Guru, etc.) Be creative!<br><br></p2>
+        <hr>
+        <ul>
+          <li>Gary Tohill,    Doing-Java-and-Other-Stuff Guy<br>I am completing my final year of a degree in Computer Science. When I am not busy trying to understand the purpose of "public static void main", I am contemplating if Hamelt's question "To be, or not to be" is a binary choice...</li>
+          <li>Ossama Mahmoud, GitHib Manager Man <br>
+          I am a second year Computer Science student. I enjoy solving real world medicine related problems using Computer Science. And I do Judo competitively!
+          <li>NAME, Title <br> Description of urself........</li>
+        </ul>
+
+
 
 
       </section>
