--- a/plan.html
+++ b/plan.html
@@ -20,7 +20,7 @@
 
       </header>
       <section>
-        <h1>UI Design Page</h1>
+        <h1>Project Plan Page</h1>
         <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
         <p1>This is what is required for this page:<br><br></p1>
         <p2> Use this page to propose any additional features your team would like to add to the project. Either in response to the returned proposal, or for something completely new, you must include:</p2>
