--- a/roster.html
+++ b/roster.html
@@ -29,6 +29,7 @@
           <li>Gary Tohill,    Doing-Java-and-Other-Stuff Guy<br>I am completing my final year of a degree in Computer Science. When I am not busy trying to understand the purpose of "public static void main", I am contemplating if Hamelt's question "To be, or not to be" is a binary choice...</li>
           <li>Ossama Mahmoud, GitHib Manager Man <br>
           I am a second year Computer Science student. I enjoy solving real world medicine related problems using Computer Science. And I do Judo competitively!
+          <li>Jiahao Zhang, Mystic Programmer<br>I am enjoying my last year of double major in computer science and statistics. I am very interested in Data Mining, Sorting and NBA games. My titile originates from Mystic Mac-Connor McGregor, amazing man.</li>
           <li>NAME, Title <br> Description of urself........</li>
         </ul>
 
