--- a/roster.html
+++ b/roster.html
@@ -30,6 +30,7 @@
           <li>Ossama Mahmoud, GitHib Manager Man <br>
           I am a second year Computer Science student. I enjoy solving real world medicine related problems using Computer Science. And I do Judo competitively!
           <li>Jiahao Zhang, Mystic Programmer<br>I am enjoying my last year of double major in computer science and statistics. I am very interested in Data Mining, Sorting and NBA games. My titile originates from Mystic Mac-Connor McGregor, amazing man.</li>
+          <li>Vaughan Robertson, Coding Aficionado<br>I am in my second year of my degree in Computer Science. I like watching movies and playing games in my free time. I also enjoy building computers, and tinkering with electronics.</li>
           <li>NAME, Title <br> Description of urself........</li>
         </ul>
 
