--- a/roster.html
+++ b/roster.html
@@ -29,8 +29,9 @@
           <li>Gary Tohill,    Doing-Java-and-Other-Stuff Guy<br>I am completing my final year of a degree in Computer Science. When I am not busy trying to understand the purpose of "public static void main", I am contemplating if Hamelt's question "To be, or not to be" is a binary choice...</li>
           <li>Ossama Mahmoud, GitHib Manager Man <br>
           I am a second year Computer Science student. I enjoy solving real world medicine related problems using Computer Science. And I do Judo competitively!
-          <li>Jiahao Zhang, Mystic Programmer<br>I am enjoying my last year of double major in computer science and statistics. I am very interested in Data Mining, Sorting and NBA games. My titile originates from Mystic Mac-Connor McGregor, amazing man.</li>
+          <li>Jiahao Zhang, Mystic Programmer<br>I am enjoying my last year of double major in computer science and statistics. I am very interested in Data Mining, Sorting and NBA games. My title originates from Mystic Mac-Connor McGregor, amazing man.</li>
           <li>Vaughan Robertson, Coding Aficionado<br>I am in my second year of my degree in Computer Science. I like watching movies and playing games in my free time. I also enjoy building computers, and tinkering with electronics.</li>
+          <li>Xi(Tony) Zhu, API Apprentice <br> I'm in my fourth year finishing up my degree in biochemistry and computer science. I enjoy video games, tennis and coding ofcourse. </li>  
           <li>NAME, Title <br> Description of urself........</li>
         </ul>
 
