updated UI design page

--- a/UI.html
+++ b/UI.html
@@ -22,14 +22,13 @@
       <section>
         <h1>UI Design Page</h1>
         <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
-        <p1>This is what is required for this page:<br><br></p1>
-        <ul>
-          <li>Write a brief description of the look and feel you want your program to have, or cite an existing design language (e.g. minimal, Material Design, flat design, etc.) You could also cite an existing application or website as a source of inspiration.</li>
-          <li>Describe at a very high level how users will interact with your software.</li>
-          <li>This page should also include mock-ups of screens or views you plan to include in your application</li>
-          <li>No matter the format, ensure that your UI Design Page portrays the intended interfaces for all of your application’s user facing features, and how users will navigate between them.</li>
-        </ul>
 
+        <p1>The design of the program should be a flat design with a simple but informative dashboard. Each element of the dashboard can be expanded to show more information.<br>The user will intaract by pressing buttons, interction is represented in the diagram below<br><br></p1>
+        <hr>
+        <h2>UI interactions Diagram<br><br></h2>
+
+        <img align = "middle" src="UI-diagram.png">
+        <p2><a href="/UI-diagram.png">Full size</a></p2>
 
       </section>
       <footer>
