--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       </header>
       <section>
         <h1>Home Page</h1>
-        <p1>This is the project description
-        blabalablablabalbalbala<br><br></p1>
+        <p1><font size="4">Project Description<br></font></p1>
+
+        <p2>We are designing a household managing program. It will allow house members to better coordinate with each other in terms of events, tasks, finances and more. Users will sign in using their Google accounts. Users will create a House and add house members to it, from their each member can log their expenses, events, and tasks. This info will then be presented to the user in a meaningful way.<br><br></p2>
+        <hr>
         <ul>
           <li> <a href="/roster.html">Team Roster Page</a></li>
           <li> <a href="/design.html">Software Design Page</a></li>
           <li> <a href="/UI.html">UI Design Page</a></li>
           <li><a href="/plan.html">Project Plan Page</a></li>
         </ul>
-        <h2>USER STORIES NEED TO BE DONE TOO</h2>
+
 
       </section>
       <footer>
