--- a/UI.html
+++ b/UI.html
@@ -23,7 +23,7 @@
         <h1>UI Design Page</h1>
         <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
 
-        <p1>The design of the program should be a flat design with a simple but informative dashboard. Each element of the dashboard can be expanded to show more information.<br>The user will intaract by pressing buttons, interction is represented in the diagram below<br><br></p1>
+        <p1>The design of the program should be a flat design with a simple but informative dashboard. Each element of the dashboard can be expanded to show more information.<br>The user will interact by pressing buttons, interction is represented in the diagram below<br><br></p1>
         <hr>
         <h2>UI interactions Diagram<br><br></h2>
 
