--- a/UI.html
+++ b/UI.html
@@ -21,7 +21,7 @@
       </header>
       <section>
         <h1>UI Design Page</h1>
-        <p><a href="https://CS2212-Team-2.github.io">Home</a><br><br></p>
+        <p><a href="https://CS2212-Team-2.github.io">Home</a></p>
 
         <p1>The design of the program should be a flat design with a simple but informative dashboard. Each element of the dashboard can be expanded to show more information.<br>The user will interact by pressing buttons, interction is represented in the diagram below<br><br></p1>
         <hr>
