--- a/roster.html
+++ b/roster.html
@@ -32,6 +32,7 @@
           <li>Jiahao Zhang, Mystic Programmer<br>I am enjoying my last year of double major in computer science and statistics. I am very interested in Data Mining, Sorting and NBA games. My title originates from Mystic Mac-Connor McGregor, amazing man.</li>
           <li>Vaughan Robertson, Coding Aficionado<br>I am in my second year of my degree in Computer Science. I like watching movies and playing games in my free time. I also enjoy building computers, and tinkering with electronics.</li>
           <li>Xi(Tony) Zhu, API Apprentice <br> I'm in my fourth year finishing up my degree in biochemistry and computer science. I enjoy video games, tennis and coding ofcourse. </li>  
+          <li>Nicholas Cheng, Programming Person <br> I'm in second year Computer Science. Outside of school, I mostly play videogames, but I also enjoy coding and logic puzzles.</li>
           <li>NAME, Title <br> Description of urself........</li>
         </ul>
 
